--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br><br>
 <a>Hi! I'm Sybil! I like drawing, making music, and being "funny." (i am not)</a>
 <br>
-<a>I spend too much time at my computer lol </a>
+<a>I'm honestly just kind of a loser tbh LOL</a>
 <br><br>
 <a>You can find me here VVV</a>
 <br><br>
