--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br><br>
 <a>-> </a><a class="link" href="https://discord.com/channels/@me/1188742542309732412">Discord (@interwebgirl)</a>
 <br>
-<a>-> </a><a class="link" href="https://bsky.app/profile/interwebgirl.bsky.social">Bluesky</a>
+<a>-> </a><a class="link" href="https://bsky.app/profile/interwebgirl.lol">Bluesky</a>
 <br>
 <a>-> </a><a class="link" href="https://www.youtube.com/channel/UCftHiJSprIhDs8nwcN8Gvlw/">Youtube</a>
 <br>
