--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <title>INTERWEB GIRL</title>
-<link href="./pretty.css" rel="stylesheet" type="text/css" media="all">
-<link rel="shortcut icon" href="./ICON.PNG">
+<link href="../pretty.css" rel="stylesheet" type="text/css" media="all">
+<link rel="shortcut icon" href="../ICON.PNG">
 
 <div class="toroline">
 <br>
