--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -9,7 +9,7 @@
 <br>
 </div>
 
-<div>
+<div class="content">
 
     <h1>you're probably not supposed to be here, this is just me trying to fine-tune my main page's css LOL, if you wanna stay here tho i wont judge you</h1>
 </div>
