navbar coming soon i think maybe

--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -3,8 +3,15 @@
 <body>
 <title>INTERWEB GIRL</title>
 <link href="../pretty.css" rel="stylesheet" type="text/css" media="all">
-<link rel="shortcut icon" href="../ICON.PNG">
+<link rel="icon" href="../favicon.png">
 
+<div class="nav">
+    <a class="navlink" href="example.com">HOME</a>
+    <a class="navlink" href="example.com">GALLERY?</a>
+    <a class="navlink" href="example.com">METASTORY</a>
+    <a class="navlink" href="example.com">AOB</a>
+</div>
+<center><a>metastory and aob might not be parts of this lol</a></center>
 <div class="toroline">
 <br>
 </div>
