--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <title>INTERWEB GIRL</title>
 <link href="./pretty.css" rel="stylesheet" type="text/css" media="all">
-<link rel="shortcut icon" href="./ICON.PNG">
+<link rel="icon" href="./favicon.png">
 
 <div class="toroline">
 <br>
