PLEASEEE PLEASSEEE PLEASEPLEAPLSPEALPLEPALSPELAPLEAEEE

--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -1,3 +1,5 @@
+<!--I am so sorry if you are going through my code i dont know what im doiiingg </33333 -->
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -6,10 +8,16 @@
 <link rel="icon" href="../favicon.png">
 
 <div class="nav">
-    <a class="navlink" href="example.com">HOME</a>
-    <a class="navlink" href="example.com">GALLERY?</a>
-    <a class="navlink" href="example.com">METASTORY</a>
-    <a class="navlink" href="example.com">AOB</a>
+    <div class="navlink">
+        <a class="navlink" href="example.com">HOME</a>
+    </div>
+    <div class="navlink">
+        <a class="navlink" href="example.com">GALLERY</a>
+    </div>
+    <div class="navlink">
+        <a class="navlink" href="example.com">METASTORY</a>
+    </div>
+
 </div>
 <center><a>metastory and aob might not be parts of this lol</a></center>
 <div class="toroline">
