pleaseee please pleasaee pleaseplease

--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -3,21 +3,18 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>INTERWEB GIRL</title>
+<title>CSS TESTING - INTERWEB GIRL</title>
 <link href="../pretty.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="../favicon.png">
-
+<center></center>
 <div class="nav">
-    <div class="navlink">
-        <a class="navlink" href="example.com">HOME</a>
-    </div>
-    <div class="navlink">
-        <a class="navlink" href="example.com">GALLERY</a>
-    </div>
-    <div class="navlink">
-        <a class="navlink" href="example.com">METASTORY</a>
-    </div>
 
+        <a class="navlink" href="example.com">HOME</a>
+
+        <a class="navlink" href="example.com">GALLERY</a>
+
+        <a class="navlink" href="example.com">METASTORY</a>
+</center>
 </div>
 <center><a>metastory and aob might not be parts of this lol</a></center>
 <div class="toroline">
@@ -26,8 +23,9 @@
 
 <div class="content">
 
-    <h1>you're probably not supposed to be here, this is just me trying to fine-tune my main page's css LOL, if you wanna stay here tho i wont judge you</h1>
+    <h1>you're probably not supposed to be here LOL, if you wanna stay here tho i wont judge you</h1>
 </div>
+<br><br>
 <div class="content">
 
 <center> 
