--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -13,10 +13,10 @@
 
         <a class="navlink" href="example.com">GALLERY</a>
 
-        <a class="navlink" href="example.com">METASTORY</a>
+        <a class="navlink" href="example.com">SNOWDINSIDES</a>
 </center>
 </div>
-<center><a>metastory and aob might not be parts of this lol</a></center>
+<center><a>snowdinsides and stuff might not be parts of this lol</a></center>
 <div class="toroline">
 <br>
 </div>
