--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </center>
     <a>I haven't done much yet, but some cool things I've worked on are:</a>
     <br><br>
-    <a>-> </a><a class="link" href="https://bitsandbsides.carrd.co/">Bits & Bsides</a>
+    <a>-> </a><a class="link" href="https://snowdinsides.carrd.co/">SNOWDINSIDES</a>
     <br>
     <br><br>
     <a>... And I'm making more stuff behind the scenes, stay tuned !!</a>
