--- a/csstesting/index.html
+++ b/csstesting/index.html
@@ -4,7 +4,7 @@
 <html>
 <body>
 <title>CSS TESTING - INTERWEB GIRL</title>
-<link href="../pretty.css" rel="stylesheet" type="text/css" media="all">
+<link href="./csstest.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="../favicon.png">
 <center></center>
 <div class="nav">
