workin on an extremely simplified version, since i think itd be easier than what i have going on rn LOL

--- a/index.html
+++ b/index.html
@@ -1,62 +1,20 @@
+<!--I am so sorry if you are going through my code i dont know what im doiiingg </33333 -->
+
 <!DOCTYPE html>
 <html>
 <body>
-<title>INTERWEB GIRL</title>
-<link href="./pretty.css" rel="stylesheet" type="text/css" media="all">
+<title>GALLERY - INTERWEB GIRL</title>
+<link href="./old.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="./favicon.png">
 
-<div class="toroline">
-<br>
-</div>
 <div class="content">
-
 <center> 
-<h1>About me!</h1>
-</center>
+    <h1>Come back later!</h1>
 
-<img src="./art/sybilmain.gif">
-<br><br>
-<a>Hi! I'm Sybil! I like drawing, making music, and being "funny." (i am not)</a>
-<br>
-<a>I'm honestly just kind of a loser tbh LOL</a>
-<br><br>
-<a>You can find me here VVV</a>
-<br><br>
-<a>-> </a><a class="link" href="https://discord.com/channels/@me/1188742542309732412">Discord (@interwebgirl)</a>
-<br>
-<a>-> </a><a class="link" href="https://bsky.app/profile/interwebgirl.lol">Bluesky</a>
-<br>
-<a>-> </a><a class="link" href="https://www.youtube.com/channel/UCftHiJSprIhDs8nwcN8Gvlw/">Youtube</a>
-<br>
-<a>-> </a><a class="link" href="https://soundcloud.com/interweb-girl">Soundcloud</a>
-<br>
-<a>-> </a><a class="link" href="https://vrchat.com/home/user/usr_f0dfe47e-e898-40f4-aa35-39a1c5895631">VRChat</a>
-<br><br>
-<a>There isn't much here yet, but I plan on adding more stuff soon <:)</a>
-</div>
-
-<br><br>
-
-
-<div class="content">
-
-    <center> 
-    <h1>Things I've done and worked on.</h1>
-    </center>
-    <a>I haven't done much yet, but some cool things I've worked on are:</a>
-    <br><br>
-    <a>-> </a><a class="link" href="https://snowdinsides.carrd.co/">SNOWDINSIDES</a>
-    <br>
-    <br><br>
-    <a>... And I'm making more stuff behind the scenes, stay tuned !!</a>
-    </div>
     
-    <br><br>
+    <img src="./wip.png"></img>
 
-<audio controls id="bgm" loop>
-    <source src="./art/interwebgirlmain.mp3" type="audio/mpeg">
-    Audio not supported
-</audio>
+    </div>
 
 </body>
 </html> 
