new site working uguhuhuhuuguuuguh

--- a/new/index.html
+++ b/new/index.html
@@ -7,6 +7,9 @@
 <link href="./cool.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="../favicon.png">
 <img src="../wip.png">
+<div class="container">
+<a>testingtestingtestingtest hihihi hih ello hi thsi is probably fucked but i aint wanna fix it rn</a>
+</div>
 </div>
 </body>
 </html> 
