--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <html>
 <body>
 <title>NEWWWW - INTERWEB GIRL</title>
-<link href="./cool.css" rel="stylesheet" type="text/css" media="all">
+<link href="./new.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="../favicon.png">
 <img src="../wip.png">
 <div class="container">
