--- a/new/index.html
+++ b/new/index.html
@@ -8,6 +8,11 @@
 <link rel="icon" href="../favicon.png">
 <img src="../wip.png">
 <div class="container">
+
+<div class="side">
+<img class="side" src="art/icon256.jpeg">
+<a>Loren ipsum dolor sit amet.</a>
+</div>
 <a>testingtestingtestingtest hihihi hih ello hi thsi is probably fucked but i aint wanna fix it rn</a>
 </div>
 </div>
