--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>GALLERY - INTERWEB GIRL</title>
+<title>COME BACK LATER!! ^_^</title>
 <link href="./old.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="./favicon.png">
 
