--- a/new/index.html
+++ b/new/index.html
@@ -6,12 +6,19 @@
 <title>NEWWWW - INTERWEB GIRL</title>
 <link href="./new.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="../favicon.png">
-<img src="../wip.png">
 <div class="container">
 
 <div class="side">
 <img class="side" src="art/icon256.jpeg">
-<a>Loren ipsum dolor sit amet.</a>
+<a href="https://twitter.com">mid</a>
+<a href="https://twitter.com">mid</a>
+<a href="https://twitter.com">mid</a>
+<a href="https://twitter.com">mid</a>
+<a href="https://twitter.com">mid</a>
+</div>
+<div class="sideside">
+<h1>hi i'm sybil!</h1>
+<a>i'm a little bit peak you love me i love me Loerm Ipsum Dolor Sit Amet. Loremeluipsupsaisatstadolorsitamet.</a>
 </div>
 <a>testingtestingtestingtest hihihi hih ello hi thsi is probably fucked but i aint wanna fix it rn</a>
 </div>
