--- a/new/index.html
+++ b/new/index.html
@@ -26,6 +26,13 @@
 <a>i'm a little bit peak you love me i love me Loerm Ipsum Dolor Sit Amet. Loremeluipsupsaisatstadolorsitamet.</a>
 </div>
 
+<div class="main">
+
+<p>
+    Insert a whole lotta text here, you can really talk about whatever you want!!! It would be so awesome,,, It would be so coool,,,, it would be the most incredibly super hero movie the world has ever seen!! the screens would light up! with REAL explsosions and special effects! like tons and tons of! special effects!! my super sweet cape would be special effects!! and it woud blow your miiiinndd!! cuz its my movie! my movie! my superhero movei! its all about me yeah its all about me!
+</p>
+ 
+</div>
 </div>
 </body>
 </html> 
