--- a/new/index.html
+++ b/new/index.html
@@ -19,12 +19,14 @@
 <a href="https://twitter.com">mid</a>
 <a href="https://twitter.com">mid</a>
 
-</div>
 
-<div class="sideside">
+
+<div class="side2">
 <h1>hi i'm sybil!</h1>
 <a>i'm a little bit peak you love me i love me Loerm Ipsum Dolor Sit Amet. Loremeluipsupsaisatstadolorsitamet.</a>
 </div>
+</div>
+
 
 <div class="main">
 
