--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
-<!--I am so sorry if you are going through my code i dont know what im doiiingg </33333 -->
-
 <!DOCTYPE html>
 <html>
 <body>
-<title>COME BACK LATER!! ^_^</title>
-<link href="./old.css" rel="stylesheet" type="text/css" media="all">
+<title>INTERWEB GIRL</title>
+<link href="./css.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="./favicon.png">
 
-<div class="content">
-<center> 
-    <h1>Come back later!</h1>
+<center>
+<div class="container">
 
-    
-    <img src="./wip.png"></img>
+<div class="side">
+<img class="side" src="art/icon256.jpeg">
+<br>
+Sybil (interwebgirl.lol)
+<br>
+she/her
+<br><br>
+<audio controls loop>
+    <source src="./art/interwebsite.ogg" type="audio/ogg">
+    <source src="./art/interwebsite.mp3" type="audio/mpeg">
+    sorry! your browser can't play audio.
+  </audio>
+</div>
+<div class="side2">
+<h1>hi i'm sybil!</h1>
+<a>hi!! i'm sybil! i like to make music and stuff like that which you can find on my youtube !
+<br>
+i also do more stuff from time to time but i don't really do much</a>
+<br><br>
+<a href="https://discord.com/channels/@me">You can reach out to me on discord @ interwebgirl</a>
+<br><br>
+<a href="https://www.youtube.com/channel/UCftHiJSprIhDs8nwcN8Gvlw">Youtube</a>
+<a href="https://vrchat.com/home/user/usr_f0dfe47e-e898-40f4-aa35-39a1c5895631">VRChat</a>
+<a href="https://bsky.app/profile/interwebgirl.lol">Bluesky</a>
+</div>
+</div>
+</center>
 
-    </div>
+<center>
 
+<div class="main">
+
+<p>
+    You may know me from projects I've worked on, specifically helping with <a href="https://vrchat.com/home/group/grp_885cdac1-c07c-440d-9fe7-a48065354d4b">SNOWDINSIDES</a>, but I plan on working on more stuff soon!
+</p>
+ 
+</center>
+</div>
 </body>
 </html> 
