--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ she/her
 <h1>hi i'm sybil!</h1>
 <a>hi!! i'm sybil! i like to make music and stuff like that which you can find on my youtube !
 <br>
-i also do more stuff from time to time but i don't really do much</a>
+i also do more stuff from time to time but i don't really have much to talk about lolll,</a>
 <br><br>
 <a href="https://discord.com/channels/@me">You can reach out to me on discord @ interwebgirl</a>
 <br><br>
