--- a/index.html
+++ b/index.html
@@ -37,14 +37,22 @@ i also do more stuff from time to time but i don't really have much to talk abou
 </center>
 
 <center>
-
 <div class="main">
-
 <p>
-    You may know me from projects I've worked on, specifically helping with <a href="https://vrchat.com/home/group/grp_885cdac1-c07c-440d-9fe7-a48065354d4b">SNOWDINSIDES</a>, but I plan on working on more stuff soon!
+    You may know me from projects I've worked on, specifically making <a href="https://youtube.com/playlist?list=PLcMZ_SdlxM2OMyd1VanOzqPJr9kq0302i">music</a> for <a href="https://vrchat.com/home/group/grp_885cdac1-c07c-440d-9fe7-a48065354d4b">SNOWDINSIDES</a>, but I plan on working on more stuff soon!
 </p>
- 
 </center>
 </div>
+
+<center>
+  <div class="main">
+  <p>
+      Also, you can check out my <a href="./portfolio">portfolio</a> to see things that i've made and worked on!
+  </p>
+  <p>(there's nothing there right now IM WORKINGON ITT!!!)</p>
+  </center>
+  </div>
+
+
 </body>
 </html> 
