--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 
 <div class="side">
-<img class="side" src="art/icon256.jpeg">
+<img class="side" src="art/icon256.png">
 <br>
 Sybil (interwebgirl.lol)
 <br>
