--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ i also do more stuff from time to time but i don't really have much to talk abou
 <br><br>
 <a href="https://www.youtube.com/channel/UCftHiJSprIhDs8nwcN8Gvlw">Youtube</a>
 <a href="https://vrchat.com/home/user/usr_f0dfe47e-e898-40f4-aa35-39a1c5895631">VRChat</a>
-<a href="https://bsky.app/profile/interwebgirl.lol">Bluesky</a>
+<a href="https://twitter.com/interwebgirl_">Twitter</a>
 </div>
 </div>
 </center>
@@ -44,7 +44,9 @@ i also do more stuff from time to time but i don't really have much to talk abou
 </center>
 </div>
 
-<center>
+
+<!-- Nothing on portfolio yet, no need for it to be here
+  <center>
   <div class="main">
   <p>
       Also, you can check out my <a href="./portfolio">portfolio</a> to see things that i've made and worked on!
@@ -52,7 +54,7 @@ i also do more stuff from time to time but i don't really have much to talk abou
   <p>(there's nothing there right now IM WORKINGON ITT!!!)</p>
   </center>
   </div>
-
+-->
 
 </body>
 </html> 
