--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>INTERWEB GIRL</title>
+<title>so sorry... - interwebgirl</title>
 <link href="./css.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="./favicon.png">
 
@@ -9,52 +9,25 @@
 <div class="container">
 
 <div class="side">
-<img class="side" src="art/icon256.png">
-<br>
-Sybil (interwebgirl.lol)
-<br>
-she/her
+<img class="side" src="art/sorry.gif">
 <br><br>
 <audio controls loop>
-    <source src="./art/interwebsite.ogg" type="audio/ogg">
-    <source src="./art/interwebsite.mp3" type="audio/mpeg">
+    <source src="./art/tomodachiliferejected.mp3" type="audio/mpeg">
     sorry! your browser can't play audio.
   </audio>
 </div>
 <div class="side2">
-<h1>hi i'm sybil!</h1>
-<a>hi!! i'm sybil! i like to make music and stuff like that which you can find on my youtube !
+<h1>hi i'm sybil</h1>
+<a>there used to be a website here 
 <br>
-i also do more stuff from time to time but i don't really have much to talk about lolll,</a>
+i realized i kinda stink at coding any responsive web design, making this website suck on mobile
+<br>
+since so many people use phones and not computers, i opted to make a carrd instead, sorry</a>
 <br><br>
-<a href="https://discord.com/channels/@me">You can reach out to me on discord @ interwebgirl</a>
-<br><br>
-<a href="https://www.youtube.com/channel/UCftHiJSprIhDs8nwcN8Gvlw">Youtube</a>
-<a href="https://vrchat.com/home/user/usr_f0dfe47e-e898-40f4-aa35-39a1c5895631">VRChat</a>
-<a href="https://twitter.com/interwebgirl_">Twitter</a>
+<a href="https://eeyikes.carrd.co">here's the link</a>
 </div>
 </div>
 </center>
-
-<center>
-<div class="main">
-<p>
-    You may know me from projects I've worked on, specifically making <a href="https://youtube.com/playlist?list=PLcMZ_SdlxM2OMyd1VanOzqPJr9kq0302i">music</a> for <a href="https://vrchat.com/home/group/grp_885cdac1-c07c-440d-9fe7-a48065354d4b">SNOWDINSIDES</a>, but I plan on working on more stuff soon!
-</p>
-</center>
-</div>
-
-
-<!-- Nothing on portfolio yet, no need for it to be here
-  <center>
-  <div class="main">
-  <p>
-      Also, you can check out my <a href="./portfolio">portfolio</a> to see things that i've made and worked on!
-  </p>
-  <p>(there's nothing there right now IM WORKINGON ITT!!!)</p>
-  </center>
-  </div>
--->
 
 </body>
 </html> 
