update carrd link holy shiti t was a dead link for so long

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ i realized i kinda stink at coding any responsive web design, making this websit
 <br>
 since so many people use phones and not computers, i opted to make a carrd instead, sorry</a>
 <br><br>
-<a href="https://eeyikes.carrd.co">here's the link</a>
+<a href="https://interwebgirl.carrd.co">here's the link</a>
 </div>
 </div>
 </center>
