im throwing it back!

--- a/index.html
+++ b/index.html
@@ -1,33 +1,89 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>so sorry... - interwebgirl</title>
+<title>INTERWEBGIRL!!!</title>
 <link href="./css.css" rel="stylesheet" type="text/css" media="all">
 <link rel="icon" href="./favicon.png">
 
-<center>
+<!-- weird header thingy -->
 <div class="container">
 
 <div class="side">
-<img class="side" src="art/sorry.gif">
+<img class="side" src="./assets/interwebgirl.png">
+
+</div>
+
+<div class="side2">
+<h1>~interwebgirl~</h1>
+<a class="subtextthing">she/her</a>
+<p>music composer, computer lover (technically and sexually), kitty cat :3</p>
+<a>indian nettspend alibaba fent cart respect button 👇</a>
+
 <br><br>
 <audio controls loop>
-    <source src="./art/tomodachiliferejected.mp3" type="audio/mpeg">
+    <source src="./assets/sybil website song 2 zillionth iteration.mp3" type="audio/mpeg">
     sorry! your browser can't play audio.
   </audio>
 </div>
-<div class="side2">
-<h1>hi i'm sybil</h1>
-<a>there used to be a website here 
-<br>
-i realized i kinda stink at coding any responsive web design, making this website suck on mobile
-<br>
-since so many people use phones and not computers, i opted to make a carrd instead, sorry</a>
-<br><br>
-<a href="https://interwebgirl.carrd.co">here's the link</a>
-</div>
-</div>
-</center>
 
+</div>
+
+<!-- about me section -->
+<div class="main">
+
+
+  <h1>about me!</h1>
+
+  <div class="content">
+  <p>hii i'm sybil !! i love making tunes,  messing with computers, and hanging out with my  friends :))</p>
+  <p>You can find me here VVV</p>
+
+  <li><a href="https://www.youtube.com/@interwebgirl">Youtube</a></li>
+  <li><a href="https://www.youtube.com/@interwebgirl">Soundcloud</a></li>
+  <li><a href="https://www.youtube.com/@interwebgirl">Bandcamp</a></li>
+  <li><a href="https://interwebgirl.bsky.app">Bluesky</a></li>
+  <li><a href="https://interwebgirl.tumblr.com">Tumblr</a></li>
+  <li><a href="https://vrchat.com/home/user/usr_f7a2cb5e-ebfc-431e-bc4c-e93ac0023c6f">VRChat</a></li>
+  <li><a></a>Discord: <a>@interwebgirl</a></li>
+  </div>
+
+
+</div>
+
+<br><br>
+
+<!-- stuff i'm doing section -->
+<div class="main">
+
+  
+  <h1>stuff i've worked on</h1>
+
+  <div class="content">
+  <p>not really doing much right now, but here's some things i've worked on in the past</p>
+
+  <li><a href="https://www.youtube.com/playlist?list=PLcMZ_SdlxM2PuIjVNmNAKy-zC8F3hOZrO">SNOWDINSIDES</a> 
+  <br><a class="subtextthing">I do not condone OuterBoy/DJ Deadzy and his actions.</a></li><br>
+  <li><a href="https://vrchat.com/home/world/wrld_c85c0ef7-3a7e-4dd2-b605-70df26bd0729/info">Baldi's Basics VRChat</a></li>
+  <br>
+  <p>if you want me to work on something with you, reach out to me through discord and we can talk about it! :3</p>
+  </div>
+
+
+</div>
+
+<br><br>
+
+
+<!-- 88x31s -->
+<div class="main">
+
+  <img src="./assets/88x31/powered-by-debian.gif">
+  <img src="./assets/88x31/preserve.gif">
+  <img src="./assets/88x31/kde.gif">
+  <img src="./assets/88x31/clementine-music-player.png">
+  <img src="./assets/88x31/sharing-is-caring.gif">
+  <img src="./assets/88x31/drpepper.gif">
+  <img src="./assets/88x31/deny-defend-depose.gif">
+</div>
 </body>
 </html> 
