--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
 <div class="main">
 
   <img src="./assets/88x31/powered-by-debian.gif">
-  <img src="./assets/88x31/preserve.gif">
+  <img src="./assets/88x31/internetarchive.gif">
   <img src="./assets/88x31/kde.gif">
   <img src="./assets/88x31/clementine-music-player.png">
   <img src="./assets/88x31/sharing-is-caring.gif">
+  <img src="./assets/88x31/firefoxnow.gif">
+  <img src="./assets/88x31/gimp.gif">
+  <img src="./assets/88x31/libresprite.gif">
   <img src="./assets/88x31/drpepper.gif">
   <img src="./assets/88x31/deny-defend-depose.gif">
+  <img src="./assets/88x31/spamton.gif">
 </div>
 </body>
 </html> 
