--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <div class="side2">
 <h1>~interwebgirl~</h1>
 <a class="subtextthing">she/her</a>
-<p>music composer, computer lover (technically and sexually), kitty cat :3</p>
-<a>indian nettspend alibaba fent cart respect button 👇</a>
+<p>music composer, computer lover, #1 debian shill, kitty cat :3</p>
+<a>they tell me keep it sybil i tell them take it slow</a>
 
 <br><br>
 <audio controls loop>
-    <source src="./assets/sybil website song 2 zillionth iteration.mp3" type="audio/mpeg">
+    <source src="./assets/interwebgirl-website-song-free-mp3-novirus.mp3" type="audio/mpeg">
     sorry! your browser can't play audio.
   </audio>
 </div>
