--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <img src="./assets/88x31/internetarchive.gif">
   <img src="./assets/88x31/kde.gif">
   <img src="./assets/88x31/clementine-music-player.png">
+  <img src="./assets/88x31/fl-studio.png">
   <img src="./assets/88x31/sharing-is-caring.gif">
   <img src="./assets/88x31/firefoxnow.gif">
   <img src="./assets/88x31/gimp.gif">
