WHERE IS LS MARK?

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 <div class="main">
 
   <img src="./assets/88x31/powered-by-debian.gif">
-  <img src="./assets/88x31/internetarchive.gif">
+  <img src="./assets/88x31/paws.gif">  
+  <img src="./assets/88x31/mobiles.gif"> 
   <img src="./assets/88x31/kde.gif">
   <img src="./assets/88x31/clementine-music-player.png">
   <img src="./assets/88x31/fl-studio.png">
@@ -86,9 +87,13 @@
   <img src="./assets/88x31/firefoxnow.gif">
   <img src="./assets/88x31/gimp.gif">
   <img src="./assets/88x31/libresprite.gif">
+  <img src="./assets/88x31/internetarchive.gif">
+  <img src="./assets/88x31/kiwix.gif">
   <img src="./assets/88x31/drpepper.gif">
   <img src="./assets/88x31/deny-defend-depose.gif">
   <img src="./assets/88x31/spamton.gif">
+  <img src="./assets/88x31/queerpride.gif">
+  <img src="./assets/88x31/lsmark.gif">
 </div>
 </body>
 </html> 
