--- a/404.html
+++ b/404.html
@@ -2,12 +2,8 @@
 <html>
 <title>are you lost?</title>
 <link rel="shortcut icon" href="./ICON.PNG">
-<link href="./404/404.css" rel="stylesheet" type="text/css" media="all">
+<link href="./css.css" rel="stylesheet" type="text/css" media="all">
 <center>
-<img src="./404/art/areyoulost.gif">
-are you lost?
-<img src="./404/art/areyoulost.gif">
-<br><br><br><br>
-<a href="./index.html">YES</a> <a id="disabled" href="./404/1.html">NO</a>
+<h1>?</h1>
 </center>
 </html>
