my domain name no

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 
 <div class="side">
-<img class="side" src="./assets/interwebgirl.png">
+<img class="side" src="./assets/interwebgirlsona.png">
 
 </div>
 
@@ -66,6 +66,7 @@
   <li><a href="https://vrchat.com/home/world/wrld_c85c0ef7-3a7e-4dd2-b605-70df26bd0729/info">Baldi's Basics VRChat</a></li>
   <br>
   <p>if you want me to work on something with you, reach out to me through discord and we can talk about it! :3</p>
+  <a href="./portfolio/index.html">click here to see my on-website portfolio!</a>
   </div>
 
 
