--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
 <div class="main">
 <div class="content">
 <h1>my portfolio!</h1>
-<img src="./assets/portfoliosybil.png">
+<img src="./assets/sybilportfoliocover.gif">
 <p>this is stuff i've made that i'm proud of! if you like what you listen to and want me to work on something with you, please reach out to me on discord! <a>@interwebgirl</a></p>
 </div>
 </div>
