uhhhhh yeah im the goat

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!--shoutouts to mai lawton maidado.xyz for the meta tag thing-->
+    <!--i kinda stole it from her uhm     shes cool tho shoutouts mai-->
+    <meta charset="UTF-8">
+    <meta property="og:title" content="interwebgirl!!!">    
+    <meta name="twitter:title" content="interwebgirl!!!">
+    <meta property="og:description" content="sybil website wows!">
+    <meta name="twitter:description" content="sybil website wows!">
+    <meta name="description" content="sybil website wows!">
+    <meta property="og:image" content="/assets/embed.png">
+    <meta name="twitter:image" content="/assets/embed.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <title>interwebgirl!!!</title>
+    <link href="./css.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" href="./favicon.png">
+  </head>
+
 <body>
-<title>INTERWEBGIRL!!!</title>
-<link href="./css.css" rel="stylesheet" type="text/css" media="all">
-<link rel="icon" href="./favicon.png">
 
 <!-- weird header thingy -->
 <div class="container">
