--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>my portfolio!!</title>
+    <link href="../css.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" href="../favicon.png">
+  </head>
 <body>
-<title>MY PORTFOLIO</title>
-<link href="../css.css" rel="stylesheet" type="text/css" media="all">
-<link rel="icon" href="../favicon.png">
-
 <center>
 
 <!-- if you're here to find good programming, look somewhere else -->
