--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
   <img src="./assets/88x31/spamton.gif">
   <img src="./assets/88x31/queerpride.gif">
   <img src="./assets/88x31/lsmark.gif">
+  <img src="./assets/88x31/penguins.gif">
 </div>
 </body>
 </html> 
