--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <p>You can find me here VVV</p>
 
   <li><a href="https://www.youtube.com/@interwebgirl">Youtube</a></li>
-  <li><a href="https://www.youtube.com/@interwebgirl">Soundcloud</a></li>
-  <li><a href="https://www.youtube.com/@interwebgirl">Bandcamp</a></li>
+  <li><a href="https://www.soundcloud.com/interweb-girl">Soundcloud</a></li>
+  <li><a href="https://interwebgirl.bankdcamp.com">Bandcamp</a></li>
   <li><a href="https://interwebgirl.bsky.app">Bluesky</a></li>
   <li><a href="https://interwebgirl.tumblr.com">Tumblr</a></li>
   <li><a href="https://vrchat.com/home/user/usr_f7a2cb5e-ebfc-431e-bc4c-e93ac0023c6f">VRChat</a></li>
