--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>~interwebgirl~</h1>
 <a class="subtextthing">she/her</a>
 <p>music composer, computer lover, #1 debian shill, kitty cat :3</p>
-<a>they tell me keep it sybil i tell them take it slow</a>
+<a>meow meow meow meow meow meow meow meow meow</a>
 
 <br><br>
 <audio controls loop>
