got a macbook air 2017 its sauceome

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <div class="side">
 <img class="side" src="./assets/interwebgirlsona.png">
+<!--<a href="./gallery">click here to see more of her ^</a> COMING SOON!! -->
 
 </div>
 
@@ -100,6 +101,7 @@
   <img src="./assets/88x31/sharing-is-caring.gif">
   <img src="./assets/88x31/firefoxnow.gif">
   <img src="./assets/88x31/gimp.gif">
+  <img src="./assets/88x31/poweredbymac.gif">
   <img src="./assets/88x31/libresprite.gif">
   <img src="./assets/88x31/internetarchive.gif">
   <img src="./assets/88x31/kiwix.gif">
