--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <title>interwebgirl!!!</title>
     <link href="./css.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">  
   </head>
 
 <body>
