remove dj deadzy line it was just kinda clutter low key

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="side2">
 <h1>~interwebgirl~</h1>
 <a class="subtextthing">she/her</a>
-<p>music composer, computer lover, #1 debian shill, kitty cat :3</p>
+<p>music composer, computer lover, kitty cat :3</p>
 <a>meow meow meow meow meow meow meow meow meow</a>
 
 <br><br>
@@ -76,7 +76,7 @@
   <p>not really doing much right now, but here's some things i've worked on in the past</p>
 
   <li><a href="https://www.youtube.com/playlist?list=PLcMZ_SdlxM2PuIjVNmNAKy-zC8F3hOZrO">SNOWDINSIDES</a> 
-  <br><a class="subtextthing">I do not condone OuterBoy/DJ Deadzy and his actions.</a></li><br>
+  <br>
   <li><a href="https://vrchat.com/home/world/wrld_c85c0ef7-3a7e-4dd2-b605-70df26bd0729/info">Baldi's Basics VRChat</a></li>
   <br>
   <p>if you want me to work on something with you, reach out to me through discord and we can talk about it! :3</p>
