fix bluesky link
IT WSA DEAD FOR LIKE A MONTH OR 2 💔

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <li><a href="https://www.youtube.com/@interwebgirl">Youtube</a></li>
   <li><a href="https://www.soundcloud.com/interweb-girl">Soundcloud</a></li>
   <li><a href="https://interwebgirl.bandcamp.com">Bandcamp</a></li>
-  <li><a href="https://interwebgirl.bsky.app">Bluesky</a></li>
+  <li><a href="https://bsky.app/profile/interwebgirl.com">Bluesky</a></li>
   <li><a href="https://vrchat.com/home/user/usr_f7a2cb5e-ebfc-431e-bc4c-e93ac0023c6f">VRChat</a></li>
   <li><a></a>Discord: <a>@interwebgirl</a></li>
   </div>
